# pull-request-fixer

./: .pre-commit-config.yaml  action.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: autolabeler.yaml  build-test-release.yaml  build-test.yaml  release-drafter.yaml  sha-pinned-actions.yaml  testing.yaml
scripts/: diagnose_org_access.py
src/pull_request_fixer/: cli.py  pr_scanner.py
tests/: test_file_fixer_comprehensive.py  test_graphql_queries.py
