# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2025 The Linux Foundation

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pull-request-fixer"
dynamic = ["version"]
description = "Pull request formatter and fixer with GitHub integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "The Linux Foundation", email = "releng@linuxfoundation.org"},
]
keywords = ["pr", "pull-request", "formatter", "github", "pre-commit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "typer>=0.20.0",
    "rich>=14.2.0",
    "httpx[http2]>=0.28.1",
    "pydantic>=2.12.5",
    "aiolimiter>=1.2.1",
    "tenacity>=9.1.2",
    "dependamerge>=0.1.19",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "mypy>=1.19.0",
    "ruff>=0.14.8",
    "pre-commit>=4.5.0",
]

[project.urls]
Homepage = "https://github.com/lfreleng-actions/pull-request-fixer"
Repository = "https://github.com/lfreleng-actions/pull-request-fixer.git"
"Bug Tracker" = "https://github.com/lfreleng-actions/pull-request-fixer/issues"

[project.scripts]
pull-request-fixer = "pull_request_fixer.cli:cli"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/pull_request_fixer/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pull_request_fixer"]

[tool.hatch.build.targets.sdist]
include = ["src", "README.md", "LICENSE*", "pyproject.toml", ".pre-commit-hooks.yaml"]

[tool.ruff]
target-version = "py312"
line-length = 80
exclude = [
    "src/pull_request_fixer/_version.py",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG001", # unused-function-argument
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "Q",      # flake8-quotes
    "PLE",    # pylint errors
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
]
ignore = [
    "E501",   # line too long, handled by formatter
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value used in comparison
    "PLR0912", # too many branches
    "PLR0915", # too many statements
]

[tool.ruff.lint.isort]
known-first-party = ["pull_request_fixer"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.basedpyright]
pythonVersion = "3.12"
pythonPlatform = "All"
typeCheckingMode = "standard"
include = ["src", "tests", "scripts", "test_blocked_pr_logic.py", "test_integration.py"]
exclude = [
    "src/pull_request_fixer/_version.py",
    ".venv",
    "build",
    "dist",
]

# --- Errors we want to catch and fix ---
reportMissingTypeArgument = "warning"
reportOptionalMemberAccess = "warning"
reportCallIssue = "warning"
reportAssignmentType = "warning"
reportReturnType = "warning"
reportGeneralTypeIssues = "warning"
reportUninitializedInstanceVariable = "warning"

# --- Intentional patterns we suppress ---
# Third-party imports cannot be resolved in pre-commit.ci sandbox
reportMissingImports = false
# Typer uses Option() calls in parameter defaults by design
reportCallInDefaultInitializer = false
# Typer parameters are consumed by the framework, not the function body
reportUnusedParameter = false
# Test files legitimately access private members for testing
reportPrivateUsage = false
# Test files and CLI create values that are intentionally unused
reportUnusedCallResult = false
# Many third-party and dynamic types produce Any
reportAny = false
reportExplicitAny = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportUnknownArgumentType = false
# Missing type annotations are tracked separately (mypy)
reportMissingParameterType = false
# String concatenation in GraphQL queries and Rich output is intentional
reportImplicitStringConcatenation = false
# Class attributes in tests don't need annotations
reportUnannotatedClassAttribute = false
# Unused imports are handled by ruff (F401)
reportUnusedImport = false
# Unused functions are typically CLI helpers or test utilities
reportUnusedFunction = false
# Unused variables are handled by ruff (F841)
reportUnusedVariable = false
# Deprecated typing imports in auto-generated files
reportDeprecated = false
# Override decorators are not required
reportImplicitOverride = false
# isinstance checks used for runtime safety
reportUnnecessaryIsInstance = false
# Comparison checks used for runtime safety
reportUnnecessaryComparison = false
# Unreachable code used for defensive programming
reportUnreachable = false
# Missing type stubs for third-party packages
reportMissingTypeStubs = false
# Constant redefinition patterns (e.g. try/except fallback classes)
reportConstantRedefinition = false
# Attribute access issues in tests (mock objects)
reportAttributeAccessIssue = false
# Operator issues in tests (mock assertions)
reportOperatorIssue = false
# Index issues in tests (mock return values)
reportIndexIssue = false

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=pull_request_fixer",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=25",
]
asyncio_default_fixture_loop_scope = "function"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["pull_request_fixer"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.uv]
# Supply-chain cooldown: do not resolve anything published in the last
# 7 days (rolling window; uv records it as a relative span in uv.lock).
# Requires uv >= 0.9.17 for the relative-duration ("7 days") form.
exclude-newer = "7 days"
